# box

./: CLAUDE.md  Cargo.toml  Makefile  README.ja.md  README.md  demo.tape  flake.nix  install.sh  realm  realm.sh
.claude/commands/: push.md
.githooks/: pre-commit
.github/workflows/: release.yml
src/: config.rs  docker.rs  git.rs  main.rs  mux.rs  overlay.rs  session.rs  tui.rs
src/mux/: client.rs  mod.rs  protocol.rs  server.rs  terminal.rs
