[package]
name = "box-cli"
version = "0.0.33"
edition = "2021"
description = "Sandboxed Docker environments for git repos"
license = "MIT"
repository = "https://github.com/yusukeshib/box"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
shell-words = "1"
libc = "0.2"
ratatui = "0.30"
crossterm = "0.29"
pty-process = "0.4"
vt100 = "0.15"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
